# A-Z-Backend

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py
staticfiles/: staticfiles.json
